--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layouts/login-layout.pug
 
 block content 
     .loginContainer 
-        h1 login 
+        h1 Login 
         form(method="post") 
             input(type="text", name="logUsername",placeholder="username or email",required="")
             input(type="password", name="logPassword",placeholder="Password",required="")
