--- a/views/register.pug
+++ b/views/register.pug
@@ -8,7 +8,7 @@ block content
             input(type="text",name="firstName",placeholder="first name",value=firstName,required="")
             input(type="text",name="lastName",placeholder="last name",value=lastName,required="")
             input(type="text",name="userName",placeholder="user name",value=userName,required="")
-            input(type="text", name="logUserName",placeholder="username or email",value=logUserName,required="")
+            input(type="text", name="email",placeholder=" Email",value=email ,required="")
             input#password(type="password", name="password",placeholder="Password",required="")
             input#passwordConf(type="password", name="passwordConf",placeholder=" Confirm Password",required="")
             input(type="submit", value="Register")
