--- a/views/home.pug
+++ b/views/home.pug
@@ -1,4 +1,6 @@
 extends layouts/main-layout.pug
       
 block content 
-    h1 Home page
+    h1 This is awesome 
+    p #{userLoggedIn.firstName}
+
