--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -4,5 +4,37 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{pageTitle}
+        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN' crossorigin='anonymous')
+        link(rel="stylesheet",href="/css/main.css")
     body 
-        block content 
+        .wrapper 
+            .row
+                nav.col-2.col-md-5  
+                    a(href="/")
+                        i.fas.fa-dove
+                    a(href="/")
+                        i.fas.fa-home
+                    a(href="/search")
+                        i.fas.fa-search 
+                    a(href="/notifications")
+                        i.fas.fa-bell
+                    a(href="/messages")
+                        i.fas.fa-envelope 
+                    a(href="/logout")
+                        i.fas.fa-sign-out-alt 
+    
+                    
+                    span Navbar 
+                .mainSectionContainer.col-10.col-md-8.col-lg-6 
+                    .titleContainer
+                        h1 #{pageTitle}
+                    block content 
+
+                .d-none.d-md-block-md-2.col-lg-4
+                    span third column
+
+        
+        script(src='https://kit.fontawesome.com/b9a41d4c10.js' crossorigin='anonymous')
+        script(src='https://code.jquery.com/jquery-3.7.1.min.js', integrity='sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=', crossorigin='anonymous')
+        script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js', integrity='sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r', crossorigin='anonymous')
+        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js', integrity='sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+', crossorigin='anonymous')
