--- a/views/mixins/mixins.pug
+++ b/views/mixins/mixins.pug
@@ -2,3 +2,7 @@ mixin createPostForm(userLoggedIn)
     .postFormContainer
         .userImageContainer 
             img(src="userLoggedIn.profilePic",alt="Users profile picture")
+        .textareaContainer 
+            textarea#postTextarea(placeholder="What's happening")
+            .buttonsContainer 
+                button#submitPostButton(disabled="") Post
