--- a/views/mixins/mixins.pug
+++ b/views/mixins/mixins.pug
@@ -1,7 +1,7 @@
 mixin createPostForm(userLoggedIn)
     .postFormContainer
         .userImageContainer 
-            img(src="userLoggedIn.profilePic",alt="Users profile picture")
+            img(src="userLoggedIn.prifilePic",alt=("Hi"))
         .textareaContainer 
             textarea#postTextarea(placeholder="What's happening")
             .buttonsContainer 
